--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prettier": "2.6.2",
     "prettier-plugin-java": "1.6.1",
     "prettier-plugin-packagejson": "2.2.17",
+    "yeoman-assert": "3.1.1",
     "yeoman-test": "6.3.0"
   },
   "engines": {
