--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-jhipster-ngxadmin",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0",
   "description": "ngxadmin",
   "keywords": [
     "yeoman-generator",
